--- a/cheat/cheat.vcxproj
+++ b/cheat/cheat.vcxproj
@@ -131,9 +131,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="clicker\clicker.h" />
     <ClInclude Include="clicker\aux.h" />
     <ClInclude Include="clicker\gui.h" />
-    <ClInclude Include="clicker\click.h" />
     <ClInclude Include="imgui\imconfig.h" />
     <ClInclude Include="imgui\imgui.h" />
     <ClInclude Include="imgui\imgui_impl_dx9.h" />
@@ -144,6 +144,7 @@
     <ClInclude Include="imgui\imstb_truetype.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="clicker\clicker.cpp" />
     <ClCompile Include="clicker\gui.cpp" />
     <ClCompile Include="clicker\main.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
