--- a/cheat/cheat.vcxproj
+++ b/cheat/cheat.vcxproj
@@ -133,7 +133,7 @@
   <ItemGroup>
     <ClInclude Include="clicker\clicker.h" />
     <ClInclude Include="clicker\aux.h" />
-    <ClInclude Include="clicker\gui.h" />
+    <ClInclude Include="UI\gui.h" />
     <ClInclude Include="imgui\imconfig.h" />
     <ClInclude Include="imgui\imgui.h" />
     <ClInclude Include="imgui\imgui_impl_dx9.h" />
@@ -142,10 +142,11 @@
     <ClInclude Include="imgui\imstb_rectpack.h" />
     <ClInclude Include="imgui\imstb_textedit.h" />
     <ClInclude Include="imgui\imstb_truetype.h" />
+    <ClInclude Include="UI\loadui.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="clicker\clicker.cpp" />
-    <ClCompile Include="clicker\gui.cpp" />
+    <ClCompile Include="UI\gui.cpp" />
     <ClCompile Include="clicker\main.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
     <ClCompile Include="imgui\imgui_demo.cpp" />
@@ -154,6 +155,7 @@
     <ClCompile Include="imgui\imgui_impl_win32.cpp" />
     <ClCompile Include="imgui\imgui_tables.cpp" />
     <ClCompile Include="imgui\imgui_widgets.cpp" />
+    <ClCompile Include="UI\loadui.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
